# shelter.nvim

./: README.md  build.lua
.github/workflows/: benchmark.yml  test.yml
benchmarks/: benchmark.lua  minimal_init.lua  update_readme.lua
crates/shelter-core/: Cargo.toml
crates/shelter-core/src/: masker.rs
crates/shelter-core/tests/: masker_test.rs  parser_test.rs
lua/shelter/: config.lua  init.lua  native.lua
lua/shelter/integrations/: buffer.lua  ecolog.lua  fzf.lua  init.lua  oil.lua  preview_base.lua  snacks.lua  telescope.lua
lua/shelter/integrations/buffer/: init.lua  paste.lua  peek.lua
lua/shelter/masking/: engine.lua
lua/shelter/utils/: platform.lua
tests/plenary/: buffer_integration_spec.lua  masking_engine_spec.lua
